# tensorflow

./: MODULE.bazel  WORKSPACE.bzlmod
tensorflow/core/: BUILD
