module(name = "org_tensorflow")

bazel_dep(name = "rules_python", version = "1.6.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")

python.defaults(python_version = "3.11")
python.toolchain(python_version = "3.11")
use_repo(python, "python_3_11", "python_3_11_host")
